[package]
name = "pond"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.94"
bytes = "1.9.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
prost = { version = "0.13.3", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
ron = "0.8.1"
thiserror = "2.0.4"
tokio = "1.42.0"
clap = { version = "4.5.22", features = ["derive"] }
tower = "0.5.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
